updated about_me sections, fixed images to where they now appear, style sheet updated to center images and add a footer

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,9 @@
 body {
     background-color: RGB(173 , 125, 198);
     margin: 0;
+    position:relative;
+    height: 100vh;
+    padding-bottom: 2.5rem;
 }
 
 h1 {
@@ -14,6 +17,11 @@ h2 {
 }
 
 h3 {
+    background-color: RGB(237, 208, 230);
+    color: RGB(85, 6, 85)
+}
+
+h4 {
     background-color: RGB(237, 208, 230);
     color: RGB(85, 6, 85)
 }
@@ -36,6 +44,7 @@ p {
     background-color: RGB(247, 218, 240);
     display: block;
     overflow: hidden;
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, .4);
 }
 
 .nav_links {
@@ -62,3 +71,23 @@ p {
     background-color: RGB(250, 230, 245);
     color: RGB(90, 10, 90);
 }
+
+img {
+    display: block;
+    width: 50%;
+    min-width: 200px;
+    margin: 16px auto;
+    box-shadow: 0 0 12px 0 rgba(0, 0, 0, .4)
+}
+
+.footer {
+    display: block;
+    background-color: RGB(247, 218, 240);
+    text-align: center;
+    padding: 10px 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
