--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@ p {
     color: RGB(85, 6, 85);
     padding: 0 5px;
 }
+/* changes text color and highlighted text color for headers and paragraphs */
 
 .title_bar {
     background-color: RGB(237, 208, 230);
@@ -39,6 +40,7 @@ p {
     padding: 20px 0;
     text-align: center;
 }
+/* div for title bar */
 
 .nav_bar {
     background-color: RGB(247, 218, 240);
@@ -46,11 +48,13 @@ p {
     overflow: hidden;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, .4);
 }
+/* div for navagation bar */
 
 .nav_links {
     width: 100%;
     overflow: hidden;
 }
+/* div for navagation bar, links other webpages onto the nav bar */
 
 .nav_bar a{
     display: block;
@@ -60,17 +64,20 @@ p {
     color: RGB(85, 6, 85);
     float: left;
 }
+/* inputs text onto the nav bar */
 
 .nav_links a:hover {
     background-color: RGB(250, 230, 245);
     color: RGB(90, 10, 90);
     transition: 0.35s;
 }
+/* highlights the link on nav bar the cursor is currently on */
 
 .active{
     background-color: RGB(250, 230, 245);
     color: RGB(90, 10, 90);
 }
+/* highlights the active webpage you're currently viewing */
 
 img {
     display: block;
@@ -79,6 +86,7 @@ img {
     margin: 16px auto;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, .4)
 }
+/* changes the sizing of images, box-shadow applies a shadow to give a layered effect */
 
 .footer {
     display: block;
@@ -90,4 +98,4 @@ img {
     width: 100%;
     height: 2.5rem;
 }
-
+/* div for creating a footer at the bottom of the page for any extra information */
